[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "aiolibrenms"
version = "0.0.1"
description = "Asynchronous library to fetch data from a libreNMS instance."
authors = [{ name = "mib1185" }]
readme = "README.md"
license.text = "Apache-2.0"
requires-python = '>=3.11'
dependencies = ["aiohttp", "mashumaro"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = 'https://github.com/mib1185/aiolibrenms'
repository = 'https://github.com/mib1185/aiolibrenms'

[tool.setuptools]
package-data = { "aiolibrenms" = ["py.typed", "*.py", "**/*.py"] }
platforms = ["any"]
packages = ["aiolibrenms"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
